--- a/core/components/login/templates/credentials.html
+++ b/core/components/login/templates/credentials.html
@@ -27,7 +27,8 @@
         <div class="item item-input padding">
           <button class="button button-block" ng-click="login()">{{ 'mm.login.loginbutton' | translate }}</button>
         </div>
+        <p> Srihari</p>
       </form>
-    </div>
+      </div>
   </ion-content>
 </ion-view>
